# snaft

./: .gitignore  .publish.json  Dockerfile  LICENSE  README.md  pyproject.toml
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: fira.rs  integrity.rs  lib.rs  poison.rs  provenance.rs
snaft/: __init__.py  blocking.py  cli.py  companions.py  compliance.py  encoded_decoder.py  firewall.py  identity.py  kernel.py  mux.py  normalize.py  provenance.py  rules_encoded_injection.py  rules_injection.py  rules_owasp_agentic.py  rules_owasp_llm.py  storage.py
tests/: test_blocking.py  test_companions.py  test_compliance.py  test_encoded_injection.py  test_firewall.py  test_rules_agentic.py  test_rules_llm.py
